controller/test/e2e/features/agentgateway/oidc/testdata/common.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ca
  namespace: agentgateway-base
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIFfDCCA2SgAwIBAgIUOBEwNkgGCBk5gTlks4MgZjBwcB0wDQYJKoZIhvcNAQEL
[...]
    yamda6yFfH9bkPO+XBK3lQ==
    -----END CERTIFICATE-----
---
apiVersion: v1
kind: Secret
metadata:
  name: oidc-client
  namespace: agentgateway-base
stringData:
  clientSecret: secret_2nGx_bjvo9z72Aw3-hKTWMusEo2-yTfH
