controller/test/e2e/features/agentgateway/oidc/testdata/secured-route-with-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-oidc
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "oidcroute.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: route-policy
  namespace: agentgateway-base
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: route-oidc
  traffic:
    oidcAuthentication:
      issuer: https://agentgateway.dev
      discovery:
        backendRef:
          group: agentgateway.dev
          kind: AgentgatewayBackend
          name: dummy-idp
          port: 8081
      clientId: mcp_gi3APARn2_uHv2oxfJJqq2yZBDV4OyNo
      clientSecretRef:
        name: oidc-client
      redirectURI: https://app.example.com/oauth/callback
      scopes:
        - profile
        - email
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: dummy-idp
  namespace: agentgateway-base
spec:
  static:
    host: dummy-idp.default
    port: 8081
