controller/test/e2e/features/agentgateway/oidc/testdata/secured-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-oidc
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "oidcroute.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: route-policy
  namespace: agentgateway-base
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: route-oidc
  traffic:
    oidc:
      issuerURL: http://dummy-idp.default:8081
      clientID: mcp_gi3APARn2_uHv2oxfJJqq2yZBDV4OyNo
      clientSecret:
        name: oidc-client
      redirectURI: http://oidcroute.com/oauth/callback
      scopes:
        - openid
        - profile
        - email
